finished desktop version

--- a/myproject/index.html
+++ b/myproject/index.html
@@ -20,26 +20,27 @@
 </head>
 
 <body>
-
-  <header class="header">
-  <img src="/myproject/assets/images/logo.svg" alt="logo" class="logo">
-  <img src="/myproject/assets/images/illustration-mockups.svg" alt="banner" class="banner">
-  </header>
-
-  <main class="body">
-    <h1 class="title">
-      Build The Community <br> Your Fans Will Love
-    </h1>
-    <p class="subtitle">
-      Huddle re-imagines the way we build communities. You have a voice, but so <br> does your audience. 
-      Create connections <br> with your users as you engage in <br> genuine discussion. 
-    </p>
-
-    <div class="button">
-      Register
-    </div>
-  </main>
-
+  <div class="desktop-box">
+    <header class="header">
+      <img src="/myproject/assets/images/logo.svg" alt="logo" class="logo">
+      <img src="/myproject/assets/images/illustration-mockups.svg" alt="banner" class="banner">
+      </header>
+    
+      <main class="body">
+        <h1 class="title">
+          Build The Community <br> Your Fans Will Love
+        </h1>
+        <p class="subtitle">
+          Huddle re-imagines the way we build communities. You have a voice, but so <br> does your audience. 
+          Create connections <br> with your users as you engage in <br> genuine discussion. 
+        </p>
+    
+        <div class="button">
+          Register
+        </div>
+      </main>
+  </div>
+  
   <footer class="footer">
     <ul class="social-icons">
       <li class="social-icons__item">
