gh web related hrefs

--- a/myproject/index.html
+++ b/myproject/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/myproject/assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/huddle-landing-page-with-single-introductory-section-master/myproject/assets/images/favicon-32x32.png">
   
-  <link rel="stylesheet" href="/myproject/css/styles.css">
+  <link rel="stylesheet" href="/huddle-landing-page-with-single-introductory-section-master/myproject/css/styles.css">
 
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
@@ -22,8 +22,8 @@
 <body>
   <div class="desktop-box">
     <header class="header">
-      <img src="/myproject/assets/images/logo.svg" alt="logo" class="logo">
-      <img src="/myproject/assets/images/illustration-mockups.svg" alt="banner" class="banner">
+      <img src="/huddle-landing-page-with-single-introductory-section-master/myproject/assets/images/logo.svg" alt="logo" class="logo">
+      <img src="/huddle-landing-page-with-single-introductory-section-master/myproject/assets/images/illustration-mockups.svg" alt="banner" class="banner">
       </header>
     
       <main class="body">
